# VideoDownloader

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  TZ_VideoDownloader.md
.github/workflows/: deploy.yml
backend/: .env.example  .env.override  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.worker  MEMORY.md  README.md  alembic.ini  docker-compose.yml  docs-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  worker-start.sh
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  20260504_0903_add_stripe_billing_fields.py
backend/docker/: Dockerfile
backend/scripts/: backup.sh  health_check.sh
backend/src/: celery_config.py  config.py  main.py
backend/src/auth/: email.py  router.py  service.py  service.py.bak
backend/src/billing/: router.py  stripe_service.py
backend/src/db/: database.py  models.py
backend/src/downloads/: router.py  service.py
backend/src/schemas/: downloads.py
backend/src/worker/: tasks.py
backend/tests/: conftest.py  test_billing.py  test_integration.py
backend/tests/mocks/: downloads.py
extension/: background.js  content.js  interceptor.js  manifest.json
extension/lib/: auth-form.html  auth-form.js
extension/options/: options.html  options.js  options.js.bak
extension/popup/: popup.html  popup.js
