[project]
name = "videograb-backend"
version = "2.0.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402"]  # Игнорировать "import not at top" в тестах

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"tests/**/*.py" = ["E402"]
